--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </code></pre>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Footer stuff</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
