--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>
 <a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>Woo!</h3>
 
-<p>This is my Github.io page</p>
+<p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
 
 <pre><code>$ cd code_here_awesome
 </code></pre>
