--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
       </header>
       <section>
         <h3>
-<a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>Woo!</h3>
+<a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3>
 
 <p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
+<p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
+<p class="view"><a href="http://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
+<p class="view"><a href="http://angel.co/givp">AngelList</a></p>
+<p class="view"><a href="https://medium.com/@givp">Medium</a></p>
+<p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
+<p class="view"><a href="http://github.com/givp">Github</a></p>
 
 <pre><code>$ cd code_here_awesome
 </code></pre>
