--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
         <h1>Giv Parvaneh</h1>
         <p></p>
 
-
-        <p class="view"><a href="https://github.com/givp">View My GitHub Profile</a></p>
-
       </header>
       <section>
         <h3>
 <a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3>
 
-<p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
 <p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
 <p class="view"><a href="http://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
 <p class="view"><a href="http://angel.co/givp">AngelList</a></p>
@@ -34,11 +30,11 @@
 <p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
 <p class="view"><a href="http://github.com/givp">Github</a></p>
 
-<pre><code>$ cd code_here_awesome
-</code></pre>
+<!--pre><code>$ cd code_here_awesome
+</code></pre-->
       </section>
       <footer>
-        <p><small>Footer stuff</small></p>
+        <p><small>2014 Giv Parvaneh. It's minimal, deal with it. Footer stuff</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
