--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </header>
       <section>
         <h3>
-<a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3>
+<!--a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3-->
 
 <p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
 <p class="view"><a href="http://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
