--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </code></pre-->
       </section>
       <footer>
-        <p><small>2014 Giv Parvaneh. It's minimal, deal with it. Footer stuff</small></p>
+        <p><small>2014 Giv Parvaneh. It's minimal, deal with it.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
