--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <header>
         <h1>Giv Parvaneh</h1>
         <p>Director of Engineering at Better Finance, Angelpad alum. CTO of Sellalytics, PICT, Academize. Ex-BBC, Ex-AOL, father, music snob, objective-c, python, part-time punk.</p>
+        <p>giv [at] givp [dot] org</p>
 
       </header>
       <section>
@@ -34,7 +35,7 @@
 </code></pre-->
       </section>
       <footer>
-        <p><small>2014 Giv Parvaneh. It's minimal, deal with it.</small></p>
+        <p><small><script>document.write(new Date().getFullYear())</script> ツ Giv Parvaneh</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
