--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Giv Parvaneh</h1>
-        <p>Director of Engineering at Better Finance, Angelpad alum. CTO of Sellalytics, PICT, Academize. Ex-BBC, Ex-AOL, father, music snob, objective-c, python, part-time punk.</p>
+        <p>Director of Engineering at Better Finance, Angelpad alum. CTO of Sellalytics, PICT, Academize. Ex-BBC, Ex-AOL, father, music-snob, objective-c, python, part-time punk.</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
