--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Giv Parvaneh</h1>
-        <p>Fatherhood + Music + Startups + Future.</p>
+        <p>Father + Music Snob + Startup guy</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
