--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <p class="view"><a href="https://medium.com/@givp">Medium</a></p>
 <p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
 <p class="view"><a href="http://github.com/givp">Github</a></p>
+<p class="view"><a href="https://www.imdb.com/name/nm2515629/">IMDb</a></p>
 
 <!--pre><code>$ cd code_here_awesome
 </code></pre-->
