--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Giv Parvaneh</h1>
-        <p>Fatherhood, sine waves, future.</p>
+        <p>24FPS, sine waves, future.</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
@@ -24,13 +24,12 @@
         <h3>
 <!--a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3-->
 
-<p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
-<p class="view"><a href="http://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
-<p class="view"><a href="http://angel.co/givp">AngelList</a></p>
-<p class="view"><a href="https://medium.com/@givp">Medium</a></p>
-<p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
-<p class="view"><a href="http://github.com/givp">Github</a></p>
-<p class="view"><a href="https://www.imdb.com/name/nm2515629/">IMDb</a></p>
+<p class="view"><a href="http://twitter.com/givp" target="_blank">Twitter</a></p>
+<p class="view"><a href="http://www.linkedin.com/in/givparvaneh" target="_blank">LinkedIn</a></p>
+<p class="view"><a href="http://angel.co/givp" target="_blank">AngelList</a></p>
+<p class="view"><a href="http://givp.tumblr.com" target="_blank">Tumblr</a></p>
+<p class="view"><a href="http://github.com/givp" target="_blank">Github</a></p>
+<p class="view"><a href="https://www.imdb.com/name/nm2515629/" target="_blank">IMDb</a></p>
 
 <!--pre><code>$ cd code_here_awesome
 </code></pre-->
