--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 <p class="view"><a href="http://twitter.com/givp" target="_blank">Twitter</a></p>
 <p class="view"><a href="http://www.linkedin.com/in/givparvaneh" target="_blank">LinkedIn</a></p>
 <p class="view"><a href="http://angel.co/givp" target="_blank">AngelList</a></p>
-<p class="view"><a href="http://givp.tumblr.com" target="_blank">Tumblr</a></p>
 <p class="view"><a href="http://github.com/givp" target="_blank">Github</a></p>
-<p class="view"><a href="https://www.imdb.com/name/nm2515629/" target="_blank">IMDb</a></p>
+<p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
 
 <!--pre><code>$ cd code_here_awesome
 </code></pre-->
