Add iTunes link and update year

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 <p class="view"><a href="https://medium.com/@givp">Medium</a></p>
 <p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
 <p class="view"><a href="http://github.com/givp">Github</a></p>
+<p class="view"><a href="https://beta.music.apple.com/us/artist/sol37/1443605041">iTunes</a></p>
 
 <!--pre><code>$ cd code_here_awesome
 </code></pre-->
       </section>
       <footer>
-        <p><small>2014 Giv Parvaneh. It's minimal, deal with it.</small></p>
+        <p><small>2019 Giv Parvaneh. It's minimal, deal with it.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
