--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <p class="view"><a href="https://medium.com/@givp">Medium</a></p>
 <p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
 <p class="view"><a href="http://github.com/givp">Github</a></p>
+<p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
 <p class="view"><a href="https://beta.music.apple.com/us/artist/sol37/1443605041">iTunes</a></p>
 
 <!--pre><code>$ cd code_here_awesome
