--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Giv Parvaneh</h1>
-        <p>24FPS, sine waves, future.</p>
+        <p>24FPS, sine waves, past.</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
