--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Giv Parvaneh</h1>
-        <p>24FPS, sine waves, future.</p>
+        <p>Code, 24FPS, sine waves, future.</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
@@ -25,12 +25,11 @@
 <!--a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3-->
 
 
-<p class="view"><a href="http://twitter.com/givp">Twitter</a></p>
-<p class="view"><a href="http://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
-<p class="view"><a href="http://angel.co/givp">AngelList</a></p>
-<p class="view"><a href="https://medium.com/@givp">Medium</a></p>
-<p class="view"><a href="http://givp.tumblr.com">Tumblr</a></p>
-<p class="view"><a href="http://github.com/givp">Github</a></p>
+<p class="view"><a href="https://twitter.com/givp">Twitter</a></p>
+<p class="view"><a href="https://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
+<p class="view"><a href="https://angel.co/givp">AngelList</a></p>
+<p class="view"><a href="https://givp.tumblr.com">Tumblr</a></p>
+<p class="view"><a href="https://github.com/givp">Github</a></p>
 <p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
 <p class="view"><a href="https://beta.music.apple.com/us/artist/sol37/1443605041">iTunes</a></p>
 
