--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Giv Parvaneh</h1>
-        <p>Code, 24FPS, sine waves, future.</p>
+        <p>24FPS, sine waves, future.</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
@@ -28,10 +28,12 @@
 <p class="view"><a href="https://twitter.com/givp">Twitter</a></p>
 <p class="view"><a href="https://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
 <p class="view"><a href="https://angel.co/givp">AngelList</a></p>
-<p class="view"><a href="https://givp.tumblr.com">Tumblr</a></p>
 <p class="view"><a href="https://github.com/givp">Github</a></p>
 <p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
-<p class="view"><a href="https://beta.music.apple.com/us/artist/sol37/1443605041">iTunes</a></p>
+<p class="view"><a href="https://open.spotify.com/artist/3pGnRt6LDiRRFatceRt6Z9?si=UmY9eQGmTRql08CG93V_zQ">Spotify (SOL37)</a></p>
+<p class="view"><a href="https://open.spotify.com/artist/3fEGpXv3d3FhpuQMOmn8hL?si=g_GkL6wwT_qqlG4ezW3QhA">Spotify (Acreatik)</p>
+<p class="view"><a href="https://open.spotify.com/artist/4M3xjZbsX9aBkSBvjztvFG?si=3ETeQDp9Qfy3jdlhAI4kqA">Spotify (Quark Kent)</p>
+
 
 <!--pre><code>$ cd code_here_awesome
 </code></pre-->
