--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 <!--a name="woo" class="anchor" href="#woo"><span class="octicon octicon-link"></span></a>You can find me here:</h3-->
 
 
-<p class="view"><a href="https://twitter.com/givp">Twitter</a></p>
-<p class="view"><a href="https://www.linkedin.com/in/givparvaneh">LinkedIn</a></p>
-<p class="view"><a href="https://angel.co/givp">AngelList</a></p>
-<p class="view"><a href="https://github.com/givp">Github</a></p>
+<p class="view"><a href="https://twitter.com/givp" target="_blank">Twitter</a></p>
+<p class="view"><a href="https://www.linkedin.com/in/givparvaneh" target="_blank">LinkedIn</a></p>
+<p class="view"><a href="https://angel.co/givp" target="_blank">AngelList</a></p>
+<p class="view"><a href="https://github.com/givp" target="_blank">Github</a></p>
 <p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
-<p class="view"><a href="https://soundcloud.com/giv-parvaneh">Film Score (Soundcloud)</a></p>
-<p class="view"><a href="https://open.spotify.com/artist/3pGnRt6LDiRRFatceRt6Z9?si=UmY9eQGmTRql08CG93V_zQ">Spotify (SOL37)</a></p>
-<p class="view"><a href="https://open.spotify.com/artist/3fEGpXv3d3FhpuQMOmn8hL?si=g_GkL6wwT_qqlG4ezW3QhA">Spotify (Acreatik)</p>
-<p class="view"><a href="https://open.spotify.com/artist/4M3xjZbsX9aBkSBvjztvFG?si=3ETeQDp9Qfy3jdlhAI4kqA">Spotify (Quark Kent)</p>
+<p class="view"><a href="https://soundcloud.com/giv-parvaneh" target="_blank">Film Score (Soundcloud)</a></p>
+<p class="view"><a href="https://open.spotify.com/artist/3pGnRt6LDiRRFatceRt6Z9?si=UmY9eQGmTRql08CG93V_zQ" target="_blank">Spotify (SOL37)</a></p>
+<p class="view"><a href="https://open.spotify.com/artist/3fEGpXv3d3FhpuQMOmn8hL?si=g_GkL6wwT_qqlG4ezW3QhA" target="_blank">Spotify (Acreatik)</p>
+<p class="view"><a href="https://open.spotify.com/artist/4M3xjZbsX9aBkSBvjztvFG?si=3ETeQDp9Qfy3jdlhAI4kqA" target="_blank">Spotify (Quark Kent)</p>
 
 
 <!--pre><code>$ cd code_here_awesome
