--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p class="view"><a href="https://angel.co/givp" target="_blank">AngelList</a></p>
 <p class="view"><a href="https://github.com/givp" target="_blank">Github</a></p>
 <p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
-<p class="view"><a href="https://soundcloud.com/giv-parvaneh" target="_blank">Film Score (Soundcloud)</a></p>
+<p class="view"><a href="https://soundcloud.com/giv-parvaneh" target="_blank">Soundcloud (Film Score)</a></p>
 <p class="view"><a href="https://open.spotify.com/artist/3pGnRt6LDiRRFatceRt6Z9?si=UmY9eQGmTRql08CG93V_zQ" target="_blank">Spotify (SOL37)</a></p>
 <p class="view"><a href="https://open.spotify.com/artist/3fEGpXv3d3FhpuQMOmn8hL?si=g_GkL6wwT_qqlG4ezW3QhA" target="_blank">Spotify (Acreatik)</p>
 <p class="view"><a href="https://open.spotify.com/artist/4M3xjZbsX9aBkSBvjztvFG?si=3ETeQDp9Qfy3jdlhAI4kqA" target="_blank">Spotify (Quark Kent)</p>
