--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Giv Parvaneh by givp</title>
+    <title>Giv Parvaneh</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Giv Parvaneh</h1>
-        <p>24FPS, sine waves, future.</p>
+        <h1>Giv Parvaneh ✨</h1>
+        <p>24FPS, sine waves, consensus.</p>
         <p>giv [at] givp [dot] org</p>
 
       </header>
@@ -27,7 +27,6 @@
 
 <p class="view"><a href="https://twitter.com/givp" target="_blank">Twitter</a></p>
 <p class="view"><a href="https://www.linkedin.com/in/givparvaneh" target="_blank">LinkedIn</a></p>
-<p class="view"><a href="https://angel.co/givp" target="_blank">AngelList</a></p>
 <p class="view"><a href="https://github.com/givp" target="_blank">Github</a></p>
 <p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
 <p class="view"><a href="https://soundcloud.com/giv-parvaneh" target="_blank">Soundcloud (Film Score)</a></p>
