--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Giv Parvaneh</title>
+    <title>Giv Par</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -39,7 +39,7 @@
 </code></pre-->
       </section>
       <footer>
-        <p><small><script>document.write(new Date().getFullYear())</script> ツ Giv Parvaneh</small></p>
+        <p><small><script>document.write(new Date().getFullYear())</script> ツ Giv Par</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
