--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Giv Parvaneh ✨</h1>
+        <h1>Giv Par ✨</h1>
         <p>Praxis.</p>
         <p>giv [at] givp [dot] org</p>
 
