--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <p class="view"><a href="https://twitter.com/givp" target="_blank">Twitter</a></p>
-<p class="view"><a href="https://www.linkedin.com/in/givparvaneh" target="_blank">LinkedIn</a></p>
+<p class="view"><a href="https://www.linkedin.com/in/givp" target="_blank">LinkedIn</a></p>
 <p class="view"><a href="https://github.com/givp" target="_blank">Github</a></p>
 <p class="view"><a href="https://imdb.me/giv" target="_blank">IMDb</a></p>
 <p class="view"><a href="https://soundcloud.com/giv-parvaneh" target="_blank">Soundcloud (Film Score)</a></p>
