Shorten title and header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Giv Par</title>
+    <title>Giv P.</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Giv Par ✨</h1>
+        <h1>Giv P ツ</h1>
         <p>Praxis.</p>
         <p>giv [at] givp [dot] org</p>
 
@@ -39,7 +39,7 @@
 </code></pre-->
       </section>
       <footer>
-        <p><small><script>document.write(new Date().getFullYear())</script> ツ Giv Par</small></p>
+        <p><small><script>document.write(new Date().getFullYear())</script> ツ Giv P.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
